--- a/LoginPage.fxml
+++ b/LoginPage.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="loginContainer" stylesheets="@LoginPage.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="quizzey.quizzey.LoginPage.LoginPageController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="loginContainer" stylesheets="@LoginPage.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="LoginPageController">
     <VBox prefHeight="400.0" prefWidth="200.0" styleClass="loginLogoContainer" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
         <ImageView fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
             <Image url="@QuizzeyLogo.png" />
@@ -24,7 +24,7 @@
         <TextField fx:id="txtFieldEmail" style="-fx-translate-y: 50;" styleClass="inputField" />
         <Label fx:id="labelPassword" style="-fx-translate-y: 85;" styleClass="labelStyle" text="Password:" />
         <PasswordField fx:id="txtFieldPassword" style="-fx-translate-y: 85;" styleClass="inputField" />
-        <Button fx:id="btnLogin" mnemonicParsing="false" prefHeight="25.0" prefWidth="350.0" style="-fx-translate-y: 140; -fx-font-family: &quot;Comic Sans MS&quot;;" styleClass="loginFormContainer" text="Login" />
+        <Button fx:id="btnLogin" mnemonicParsing="false" prefHeight="25.0" prefWidth="350.0" style="-fx-translate-y: 140; -fx-font-family: &quot;Comic Sans MS&quot;;" styleClass="loginFormContainer" onAction="#switch2sceneHome" text="Login" />
       <Label fx:id="loginMessage">
          <VBox.margin>
             <Insets top="70.0" />
