--- a/LoginPage.fxml
+++ b/LoginPage.fxml
@@ -1,22 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="login_container" stylesheets="@../../../../../../../../src/login.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainSceneController">
-   <VBox prefHeight="400.0" prefWidth="200.0" styleClass="login_logo_container" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
-      <ImageView fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-         <Image url="@../../../images/QuizzeyLogo.png" />
-      </ImageView>
-   </VBox>
-   <VBox layoutX="215.0" layoutY="38.0" prefHeight="350.0" prefWidth="350.0" styleClass="login_form_container" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
-      <Label fx:id="f" style="-fx-translate-y: 20;" styleClass="label_style" text="Choose Your Account Type:" />
-      <ChoiceBox fx:id="selector_acc" prefHeight="30.0" prefWidth="150.0" style="-fx-translate-y: 20;" styleClass="account_selector" />
-      <Label fx:id="label_email" style="-fx-translate-y: 50;" styleClass="label_style" text="Email:" />
-      <TextField fx:id="field_email" style="-fx-translate-y: 50;" styleClass="input_field" />
-      <Label fx:id="label_pass" style="-fx-translate-y: 85;" styleClass="label_style" text="Password:" />
-      <PasswordField fx:id="field_pass" style="-fx-translate-y: 85;" styleClass="input_field" />
-      <Button fx:id="btn_login" mnemonicParsing="false" prefHeight="25.0" prefWidth="350.0" style="-fx-translate-y: 140; -fx-font-family: &quot;Comic Sans MS&quot;;" styleClass="login_form_container" onAction="#switch2sceneHome" text="Login" />
-   </VBox>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="loginContainer" stylesheets="@LoginPage.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="LoginPageController">
+    <VBox prefHeight="400.0" prefWidth="200.0" styleClass="loginLogoContainer" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <ImageView fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+            <Image url="@QuizzeyLogo.png" />
+        </ImageView>
+    </VBox>
+    <VBox layoutX="215.0" layoutY="38.0" prefHeight="350.0" prefWidth="350.0" styleClass="loginFormContainer" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+        <Label fx:id="labelSelector" style="-fx-translate-y: 20;" styleClass="labelStyle" text="Choose Your Account Type:" />
+        <ChoiceBox fx:id="selectorAccount" prefHeight="30.0" prefWidth="150.0" style="-fx-translate-y: 20;" styleClass="accountSelector" />
+        <Label fx:id="labelEmail" style="-fx-translate-y: 50;" styleClass="labelStyle" text="Email:" />
+        <TextField fx:id="txtFieldEmail" style="-fx-translate-y: 50;" styleClass="inputField" />
+        <Label fx:id="labelPassword" style="-fx-translate-y: 85;" styleClass="labelStyle" text="Password:" />
+        <PasswordField fx:id="txtFieldPassword" style="-fx-translate-y: 85;" styleClass="inputField" />
+        <Button fx:id="btnLogin" mnemonicParsing="false" prefHeight="25.0" prefWidth="350.0" style="-fx-translate-y: 140; -fx-font-family: &quot;Comic Sans MS&quot;;" styleClass="loginFormContainer" onAction="#switch2sceneHome" text="Login" />
+      <Label fx:id="loginMessage">
+         <VBox.margin>
+            <Insets top="70.0" />
+         </VBox.margin>
+      </Label>
+    </VBox>
 </AnchorPane>
